Fix an issue where button positions shifted on zoom in/out

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2138,6 +2138,7 @@ div.issue.details .reaction {
   float: right;
   font-size: 0.9em;
   margin-top: 0.5em;
+  clear: both;
 }
 div.message .reaction {
   float: right;
